--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,4 @@ minecraftWorlds/
 resource_packs/
 skin_packs/
 world_templates/
-accmap.dat
-ud1532472786.dat
-ud3488187141.dat
-ud2607943045.dat
+*.dat
