Revert a couple changes

--- a/development_behavior_packs/SkyBlock/manifest.json
+++ b/development_behavior_packs/SkyBlock/manifest.json
@@ -1,30 +1,29 @@
 {
-	"format_version": 2,
-	"header": {
-		"name": "Skyblock",
-		"description": "Skyblock Behavior Pack",
-		"uuid": "18709f93-3b31-4d62-f705-f266f300fa7f",
-		"version": [1, 0, 0],
-		"min_engine_version": [1, 16, 0]
-	},
-	"metadata": {
-		"authors": ["Kirbycope"],
-		"generated_with": {
-			"blockbench_entity_wizard": ["1.0.6"]
-		}
-	},
-	"modules": [
-		{
-			"description": "Behavior",
-			"version": [1, 0, 0],
-			"uuid": "9698b23c-b669-8394-9ef9-0852d7a7847a",
-			"type": "data"
-		}
-	],
+    "format_version": 2,
+    "header": {
+        "name": "SkyBlock",
+        "description": "SkyBlock Behavior Pack",
+        "uuid": "22119525-3010-4435-876b-e0a82049fae9",
+        "version": [1, 0, 0],
+        "min_engine_version": [1, 18, 0]
+    },
+    "metadata": {
+        "authors": [
+            "Kirbycope"
+        ]
+    },
+    "modules": [
+        {
+            "description": "Behavior",
+            "type": "data",
+            "uuid": "26d9816b-d6b9-42db-ad66-3c8fc59a4ae7",
+            "version": [1, 0, 0]
+        }
+    ],
 	"dependencies": [
 		{
-			"uuid": "fd1b8237-8458-dddc-c5ab-4c047eb26822",
+			"uuid": "1d239c5d-ee3f-4f5d-9581-bb5666b19e3c",
 			"version": [1, 0, 0]
 		}
 	]
-}
+} 
