--- a/development_resource_packs/SkyBlock/manifest.json
+++ b/development_resource_packs/SkyBlock/manifest.json
@@ -1,24 +1,21 @@
 {
 	"format_version": 2,
 	"header": {
-		"name": "Skyblock",
-		"description": "Skyblock Resource Pack",
-		"uuid": "fd1b8237-8458-dddc-c5ab-4c047eb26822",
+		"name": "SkyBlock",
+		"description": "SkyBlock Resource Pack",
+		"uuid": "1d239c5d-ee3f-4f5d-9581-bb5666b19e3c",
 		"version": [1, 0, 0],
 		"min_engine_version": [1, 16, 0]
 	},
 	"metadata": {
-		"authors": ["Kirbycope"],
-		"generated_with": {
-			"blockbench_entity_wizard": ["1.0.6"]
-		}
+		"authors": ["Kirbycope"]
 	},
 	"modules": [
 		{
-			"description": "Skyblock",
+			"description": "SkyBlock",
 			"type": "resources",
-			"uuid": "8170a682-8316-09ad-4f0e-61e3f748924a",
+			"uuid": "b7904517-b0bf-45f0-9e09-baec78ab3bff",
 			"version": [1, 0, 0]
 		}
 	]
-}
+} 
